# parallel-and-distributed-processing

./: Makefile  README.md  gtr  laplace_server  memory_map.cpp  mm  threading_1.cpp
ChatsApp/: Client  Client.cpp  Makefile  Server  Server.cpp
DistributedArraySum/: ParallelImplementationOneMachine.cpp  SerialImplementation.cpp
DistributedArraySum/DistributedImplementation/: Makefile  client.cpp  server.cpp
DistributedFileTransferApp/: client.cpp  network_utils.h  server  server.cpp
DistributedLaplaceSolver/: ParallelImplementationOneMachine.cpp  SerialImplementation.cpp
DistributedLaplaceSolver/DistributedImplementation/: client.cpp  server.cpp
DistributedMatMul/: ParallelImplementationOneMachine.cpp  SerialImplementation.cpp
DistributedMatMul/DistributedImplementation/: client.cpp  server.cpp
HPC_Using_MPI/: CMakeLists.txt  LOGS_Laplace_Solver_MPI_OMP_Subest.docx  laplace_hpc_2.cpp  laplace_omp.cpp  readme.txt
OpenCL_CUDA/laplace_solver/: CMakeLists.txt  laplace_cuda.cu  laplace_opencl.cpp  laplace_serial.cpp  main.cpp
OpenCL_CUDA/matmul-comparison/: #include <cmath>.cpp  CMakeLists.txt  README.md
OpenCL_CUDA/matmul-comparison/cuda_kernels/: matmul_kernel.cu
OpenCL_CUDA/matmul-comparison/include/: matmul.hpp
OpenCL_CUDA/matmul-comparison/opencl_kernels/: matmul_kernel.cl
OpenCL_CUDA/matmul-comparison/src/: main.cpp  matmul.hpp  matmul_cuda.cu  matmul_opencl.cpp  matmul_openmp.cpp  matmul_single.cpp  utils.cpp  utils.hpp
Threading_Linux_Pthread/: get_total_ram.cpp  t1
